# log_analyzer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.json  pyproject.toml
.github/workflows/: ci.yml
log_analyzer/: config.py  log_parser.py  main.py  report_generator.py  utils.py
reports/: report-2017.06.30.html
tests/: conftest.py  test_log_parser.py  test_main.py  test_report_generator.py
